# hw_django_21.2

./: .gitignore  pyproject.toml
src/: app.py  categories.html  contacts.html  home.html  orders.html
